--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@
 }  
 
 header{
-    padding: 49px 135px;
-
+    padding: 49px 150px;
+    background-image: -webkit-gradient(linear, left bottom, right top, from(rgba(255, 255, 255, 0.9)), color-stop(70%, rgba(255, 255, 255, 0.45)), to(rgb(255, 238, 215)));
 }
 
 .logo{
@@ -25,13 +25,15 @@ header{
 .menu-header{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
 }
 
 .list-menu ul{
     display: flex;
     gap: 56px;
     list-style: none;
-    font-size: 16px;
+    font-size: 24px;
     color: var(--text-primary);
     cursor: pointer;
 }
@@ -57,7 +59,7 @@ header{
 }
 
 .button-menu button:hover{
-    color: #fff;
+    color: var(--primary-color);
     background-color: var(--text-primary);
 }
 
@@ -114,6 +116,12 @@ header{
     margin-top: 35px;
     font-size: 18px;
     font-weight: 600;
+    cursor: pointer;
+}
+
+.text-header button:hover{
+    color: var(--primary-color);
+    background-color: var(--text-primary);
 }
 
 .potuacao-header{
@@ -142,6 +150,134 @@ header{
     color: var(--text-primary);
 }
 
+.section-two{
+    padding: 49px 150px;
+    margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+}
+
+.section-two-subtitle{
+    display: flex;
+    height: 132px;
+    justify-content: space-between;
+}
+
+.section-two-subtitle h2{
+    color: var(--text-primary);
+    max-width: 986px;
+    font-size: 48px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.section-two-subtitle p{
+    font-size: 20px;
+    color: var(--text-primary);
+    max-width: 550px;
+    height: 134px;
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+}
+
+.section-two-subtitle div p{
+    justify-items: center;
+}
+
+.section-two-information{
+    margin-top: 77px;
+    display: flex;
+    gap:70px;
+    justify-content: space-between;
+}
+
+.information{
+    width: 370px;
+    height: 483px;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.information:hover{
+    box-shadow:  0px 50px 80px -30px rgba(151, 109, 0, 0.2);
+
+}
+
+.information:hover .button-arrow{
+    background-color: var(--primary-color);
+    border-radius: 100px;
+
+}
+
+.information:hover .arrow, 
+.information:hover .arrow::after{
+    color: #fff;
+
+
+
+}
+
+
+
+.information img{
+    width: 122px;
+    height: 122px;
+    margin-top: 29px;
+    margin-left: 29px;
+
+}
+
+.title-information{
+    margin-left: 40px;
+    margin-top: 68px;
+}
+
+.text-information{
+    margin-left: 40px;
+    margin-top: 12px;
+    margin-bottom: 24px;
+    margin-right: 30px;
+    text-align: center justify;
+}
+
+
+.button-arrow{
+    width: 190px;
+    display: flex;
+    align-items: center;
+    justify-content: safe;
+    margin-left: 40px;
+    padding: 10px 24px ;
+}
+
+
+.button-arrow button{
+    font-size: 16px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.arrow{
+    position: relative;
+}
+
+.arrow::after{
+    font-family: 'Font Awesome 6 Free';
+    font-weight: 900; 
+    content:'\f061'; 
+    position: absolute;
+    color: var(--text-secondary);
+    top: 50%; 
+    transform: translateY(-50%); 
+    font-size: 1rem; 
+    margin-left: 10px; 
+    z-index: 2;
+
+}
 
 
 
