--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }  
 
 header{
-    padding: 49px 150px;
+    padding: 49px 90px;
     background-image: -webkit-gradient(linear, left bottom, right top, from(rgba(255, 255, 255, 0.9)), color-stop(70%, rgba(255, 255, 255, 0.45)), to(rgb(255, 238, 215)));
 }
 
@@ -33,7 +33,7 @@ header{
     display: flex;
     gap: 56px;
     list-style: none;
-    font-size: 24px;
+    font-size: 18px;
     color: var(--text-primary);
     cursor: pointer;
 }
@@ -88,7 +88,7 @@ header{
 
 .text-header h1{
     max-width: 900px;
-    font-size: 60px;
+    font-size: 40px;
     height: 282px;
     color: var(--text-primary);
 }
@@ -134,10 +134,12 @@ header{
 
 .banner{
     width: 50%;
-    height: 800px;
+    height: 600px;
     display: flex;
     justify-content: flex-end;
 }
+
+
 
 .pontuacao h3{
     font-size: 24px;
@@ -151,7 +153,7 @@ header{
 }
 
 .section-two{
-    padding: 49px 150px;
+    padding: 49px 90px;
     margin-top: 120px;
     margin-bottom: 100px;
     display: flex;
@@ -167,7 +169,7 @@ header{
 .section-two-subtitle h2{
     color: var(--text-primary);
     max-width: 986px;
-    font-size: 48px;
+    font-size: 40px;
     font-weight: 600;
     text-transform: uppercase;
 }
@@ -175,10 +177,11 @@ header{
 .section-two-subtitle p{
     font-size: 20px;
     color: var(--text-primary);
-    max-width: 550px;
+    max-width: 400px;
     height: 134px;
     display: flex;
     align-items: center;
+    text-align: left;
     font-weight: 500;
 }
 
@@ -285,7 +288,7 @@ header{
 .section-three{
     background-color: #FFF8EE;
     display: flex;
-    padding: 49px 150px;
+    padding: 49px 90px;
     justify-content: space-between;
 }
 
@@ -310,13 +313,16 @@ header{
 }
 
 .text-h2{
-    width: 515px;
+    width: 415px;
     height: 128px;
     font-size: 28px;
+    margin-right: 20px;
     color: var(--text-secondary);
-    margin-bottom: 30px;
+    margin-bottom: 40px;
+    
 
 }
+
 
 
 .text-p{
@@ -324,6 +330,7 @@ header{
     height: 128px;
     font-size: 16px;
     color: var(--text-primary);
+    margin-top: 30px;
 }
 
 .img-opnion{
@@ -351,6 +358,78 @@ header{
     color: var(--text-primary);
     
 }
+
+.section-four{
+    padding: 49px 90px;
+}
+
+.title-section-four{
+    display: flex;
+    text-align: center;
+    margin-top: 120px;
+    align-items: center;
+    flex-direction: column;
+}
+
+.title-section-four h3{
+    color: var(--primary-color);
+    font-size: 20px;
+    text-transform: uppercase;
+    margin-bottom: 12px;
+}
+
+.title-section-four h2{
+    font-size: 40px;
+    max-width: 800px;
+    color: var(--text-primary);
+}
+
+.banner-salad{
+    display: flex;
+    gap:30px ;
+    justify-content: center;
+    margin-top: 71px;
+}
+
+.salada-1{
+    width: 370px;
+    height: 520px;
+    border-radius: 50px;
+    background-image: url('./assets/salada1.png');
+}
+
+.salada-2{
+    background-image: url('./assets/salada2.png');
+    width: 370px;
+    height: 520px;
+    border-radius: 50px;
+}
+.salada-3{
+    background-image: url('./assets/salada3.png');
+    width: 370px;
+    height: 520px;
+    border-radius: 50px;
+}
+
+.salada-text{
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
+    margin-top: 396px;
+}
+
+.salada-text span{
+    font-size: 24px;
+    color: #fff;
+
+}
+
+.salada-text h3{
+    font-size: 40px;
+    color: #fff;
+}
+
+
 
 
 
