--- a/style.css
+++ b/style.css
@@ -387,7 +387,7 @@ header{
 .banner-salad{
     display: flex;
     gap:30px ;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 71px;
 }
 
@@ -427,6 +427,87 @@ header{
 .salada-text h3{
     font-size: 40px;
     color: #fff;
+}
+
+.section-five{
+    padding: 49px 90px;
+}
+
+.subscribe{
+    display: flex;
+    flex-direction: column;
+    height: 550px;
+    background-color: #FFF8ED;
+    border-radius: 50px;
+}
+
+.text-subscribe{
+    margin-top: 84px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text-subscribe h2{
+    font-size: 20px;
+    color: var(--primary-color);
+}
+
+.text-subscribe h3{
+    font-size: 40px;
+    color: var(--text-primary);
+    max-width: 650px;
+    text-align: center;
+    margin-bottom: 24px;
+    justify-content: center;
+}
+
+.text-subscribe p{
+    font-size: 16px;
+    color: #585858;
+    max-width: 650px;
+    text-align: center;
+}
+
+.input{
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    width: 700px;
+    height: 80px;
+    border-radius: 100px;
+    margin-left: 350px;
+   
+
+}
+
+.input input{
+    border: none;
+    width: 480px;
+    height: 50px;
+}
+
+.input button{
+    border-radius: 100px;
+    background-color: var(--primary-color);
+    color: #fff;
+    width: 170px;
+    height: 50px;
+    padding: 10px 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.input button:hover{
+    background-color: var(--text-primary);
+    color: var(--primary-color);
+}
+
+input:focus {
+    box-shadow: 0 0 0 0;
+    outline: 0;
 }
 
 
