--- a/style.css
+++ b/style.css
@@ -510,6 +510,103 @@ input:focus {
     outline: 0;
 }
 
+footer{
+    padding: 49px 90px;
+}
+
+.footer-elements{
+    display: flex;
+    justify-content: space-between;
+    height: 218px;
+}
+
+.logo-footer{
+    display: flex;
+    flex-direction: column;
+    height: 216px;
+}
+
+.logo-footer img{
+    width: 124px;
+}
+
+.logo-footer h3{
+    font-size: 16px;
+    color: #585858;
+    max-width: 212px;
+    margin-top: 19px;
+    margin-bottom: 67px;
+    font-weight: 400;
+}
+
+.logo-footer span{
+    font-size: 16px;
+    color: #585858;
+    
+}
+
+.feature-footer{
+    display: flex;
+    flex-direction: column;
+    height: 217px;
+}
+
+.feature-footer h3{
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--primary-color);
+
+}
+
+.feature-footer ul{
+    list-style: none;
+}
+
+.feature-footer ul li{
+    margin-top: 8px;
+    margin-bottom: 24px;
+    
+}
+
+.feature-footer ul li a{
+    display: flex;
+    text-decoration: none;
+    color: #585858;
+
+}
+
+.feature-footer ul li a:hover{
+    color: var(--primary-color);
+}
+
+.contatos-footer h3{
+    font-size:16px;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+
+.contatos-footer ul li{
+    list-style: none;
+    font-size: 16px;
+    color: var(--text-primary);
+    max-width: 237px;
+    margin-bottom: 24px;
+    margin-top: 8px;
+}
+
+.icons-social-media{
+    display: flex;
+    width: 138px;
+    height: 18px;
+    justify-content: space-between;
+    margin-bottom: 18px;
+}
+
+.social-media-footer h3{
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--text-primary);
+}
 
 
 
